More on Unepi report

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -63,7 +63,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/#">UNEPI</a>
+            <a class="navbar-brand" href="#">UNEPI</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
