--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -52,19 +52,25 @@
         }
     </style>
 </head>
-<body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top with-flag">
+<body>
+    <nav class="navbar navbar-inverse with-flag">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#/unepi/download">UNEPI</a>
-        </div>
+        <nav>
+            <div class=container>
+                <div class="container">
+                    <br>
+                <div class="col-md-2" id="coart-of-arms" align="left"><img src='{% static "images/coart-of-arms.png" %}'></div>
+                <div class="col-md-8" id="site-name">
+                    <div class="major"><h3 class="text-center"><b>MINISTRY OF HEALTH: UNEPI EPI DASHBOARD </b></h3></div>
+                    <br>
+                    <div class="minor"><h6 class="text-center"><b>REPUBLIC OF UGANDA</b></h6></div>
+
+                </div>
+                <div class="col-md-2" id="ug-flag" align="right"><img src='{% static "images/ug-flag.png" %}'></div>
+                </div>
+            </div>
+
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 {% with menu=menus.main %}{% include "bootstrap-navbar.html" %}{% endwith %}
@@ -80,8 +86,12 @@
                 {% endif %}
             </ul>
         </div><!--/.nav-collapse -->
-    </div>
-</nav>
+        </nav>
+
+
+    <br>
+    <br>
+
 
 
 <div class="container">
@@ -89,7 +99,7 @@
     {% block content %}
     {% endblock content %}
 </div>
-
+</div>
 <!-- Tooltip div -->
 		<div id="tooltip">
 		<p class="name"></p>
@@ -136,5 +146,6 @@
 
 {% block js %}
 {% endblock js %}
+    </nav>
 </body>
 </html>
