--- a/dashboard/static/app/components/unepi/download.html
+++ b/dashboard/static/app/components/unepi/download.html
@@ -14,13 +14,29 @@
  <div class="col-md-6">
 
         <table ng-table="vm.tableParamsDoses" class="row-border hover table table-condensed table-striped" show-filter="true">
-
+            <thead>
+                <tr>
+                    <th>Antigen</th>
+                    <th>Planned monthly immunisations</th>
+                    <th>Monthly Coverage</th>
+                    <th>Annulised Coverage</th>
+                </tr>
+            </thead>
+            <tbody>
             <tr ng-repeat="row in $data">
                 <td title="'Antigen'">{{row.vaccine }}</td>
                 <td title="'Planned monthly immunisations'" class="text-center" >{{row.planned_consumption }}</td>
-                <td title="'Monthly Coverage'" class="text-center" >{{row.coverage_rate | number:0 }}%</td>
-                <td title="'Annulised Coverage'" class="text-center" >{{row.avoc | number:0 }}%</td>
+                <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate >= 90" ng-style="{'background-color':'green'} ">{{row.coverage_rate | number:0 }}%</td>
+                <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate >= 50 && row.coverage_rate <=70" ng-style="{'background-color':'orange'}">{{row.coverage_rate | number:0 }}%</td>
+                <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate >= 70 && row.coverage_rate <= 90 " ng-style="{'background-color':'yellow'}">{{row.coverage_rate | number:0 }}%</td>
+                <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate <= 50" ng-style="{'background-color':'red'}">{{row.coverage_rate | number:0 }}%</td>
+
+                <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc >= 90" ng-style="{'background-color':'green'}">{{row.avoc | number:0 }}%</td>
+                <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc >= 50 && row.avoc <=70" ng-style="{'background-color':'orange'}">{{row.avoc | number:0 }}%</td>
+                <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc >= 70 && row.avoc <= 90 " ng-style="{'background-color':'yellow'}">{{row.avoc | number:0 }}%</td>
+                <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc <= 50" ng-style="{'background-color':'red'}">{{row.avoc | number:0 }}%</td>
             </tr>
+            </tbody>
         </table>
 
     </div>
@@ -28,7 +44,11 @@
     <div class="col-md-6">
         <div class="col-md-6">
             <table class="row-border hover table table-condensed table-striped">
-                <td>
+                <td ng-if="child.dropout_Penta >= 0 && child.dropout_Penta <= 10" ng-style="{'background-color':'green'}">
+                    <span class="quality_test__description">{{"Drop Out Rate DPT1-3"}}</span>
+                    <span class="quality_test__metric"> {{child.dropout_Penta | number:0 }}% </span>
+                </td>
+                <td ng-if="child.dropout_Penta <0 || child.dropout_Penta >10" ng-style="{'background-color':'red'}">
                     <span class="quality_test__description">{{"Drop Out Rate DPT1-3"}}</span>
                     <span class="quality_test__metric"> {{child.dropout_Penta | number:0 }}% </span>
                 </td>
@@ -53,10 +73,23 @@
         </div>
         <div>
             <table class="row-border hover table table-condensed table-striped">
-                <td>
+                <td ng-if="child.category == 1" ng-style="{'background-color':'green'}">
                     <span class="quality_test__description">{{"RED CATEGORY" }}</span>
                     <span class="quality_test__metric"> CAT{{child.category}} </span>
                 </td>
+                <td ng-if="child.category == 2" ng-style="{'background-color':'yellow'}">
+                    <span class="quality_test__description">{{"RED CATEGORY" }}</span>
+                    <span class="quality_test__metric"> CAT{{child.category}} </span>
+                </td>
+                <td ng-if="child.category == 3" ng-style="{'background-color':'orange'}">
+                    <span class="quality_test__description">{{"RED CATEGORY" }}</span>
+                    <span class="quality_test__metric"> CAT{{child.category}} </span>
+                </td>
+                <td ng-if="child.category == 4" ng-style="{'background-color':'red'}">
+                    <span class="quality_test__description">{{"RED CATEGORY" }}</span>
+                    <span class="quality_test__metric"> CAT{{child.category}} </span>
+                </td>
+
             </table>
         </div>
 
@@ -71,13 +104,34 @@
 
     <div class="col-md-6">
         <table ng-table="vm.tableParamsStock" class="row-border hover table table-condensed table-striped" show-filter="true">
-
+            <thead>
+                <tr>
+                    <th>Antigen</th>
+                    <th>Months Of Stock</th>
+                    <th>Refill Rate By NMS</th>
+                    <th>Vaccine Utilised</th>
+                </tr>
+            </thead>
+            <tbody>
             <tr ng-repeat="row in $data">
                 <td title="'ANTIGEN'">{{ row.vaccine }}</td>
-                <td title="'Months Of Stock'" class="text-center" >{{ row.Months_stock }}</td>
-                <td title="'Refill Rate By NMS'" class="text-center" >{{row.Refill_rate| number:0  }}%</td>
-                <td title="'Vaccine Utilised'" class="text-center" >{{ row.uptake_rate | number:0 }}%</td>
+                <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock >= 7" ng-style="{'background-color':'green'} ">{{row.Months_stock }}</td>
+                <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock >= 3 && row.Months_stock <7" ng-style="{'background-color':'yellow'}">{{row.Months_stock}}</td>
+                <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock >= 1 && row.Months_stock <3 " ng-style="{'background-color':'orange'}">{{row.Months_stock}}</td>
+                <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock == 0" ng-style="{'background-color':'red'}">{{row.Months_stock}}</td>
+
+
+                <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate >= 90" ng-style="{'background-color':'green'} ">{{row.Refill_rate | number:0 }}%</td>
+                <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate >= 50 && row.Refill_rate <=70" ng-style="{'background-color':'orange'}">{{row.Refill_rate | number:0 }}%</td>
+                <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate >= 70 && row.Refill_rate <= 90 " ng-style="{'background-color':'yellow'}">{{row.Refill_rate | number:0 }}%</td>
+                <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate <= 50" ng-style="{'background-color':'red'}">{{row.Refill_rate | number:0 }}%</td>
+
+                <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate >= 90" ng-style="{'background-color':'green'} ">{{row.uptake_rate | number:0 }}%</td>
+                <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate >= 50 && row.uptake_rate <=70" ng-style="{'background-color':'orange'}">{{row.uptake_rate | number:0 }}%</td>
+                <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate >= 70 && row.uptake_rate <= 90 " ng-style="{'background-color':'yellow'}">{{row.uptake_rate | number:0 }}%</td>
+                <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate <= 50" ng-style="{'background-color':'red'}">{{row.uptake_rate | number:0 }}%</td>
             </tr>
+            </tbody>
         </table>
 
     </div>
@@ -89,6 +143,32 @@
                 <td>
                     <span class="quality_test__description">{{"Number Of Antigens Stocked Out" }}</span>
                     <span class="quality_test__metric"> {{child.Antigen_stockedout}} </span>
+                </td>
+         </table>
+    </div>
+
+    <table class="row-border hover table table-condensed table-striped">
+        <td>
+            <h4 class="text-center"><b>COLD CHAIN</b></h4>
+        </td>
+    </table>
+
+    <div class="col-md-6">
+
+         <table class="row-border hover table table-condensed table-striped">
+                <td>
+                    <span class="quality_test__description">{{"Cold Chain Equipment Functionality (DVS & Facilities)" }}</span>
+                    <span class="quality_test__metric"> {{}} </span>
+                </td>
+         </table>
+    </div>
+
+    <div class="col-md-6">
+
+         <table class="row-border hover table table-condensed table-striped">
+                <td>
+                    <span class="quality_test__description">{{"Cold Chain Capacity:(DVS & Facilities)" }}</span>
+                    <span class="quality_test__metric"> {{}} </span>
                 </td>
          </table>
     </div>
