--- a/dashboard/static/css/app.css
+++ b/dashboard/static/css/app.css
@@ -2315,7 +2315,7 @@ th {
   border-bottom-width: 2px;
 }
 .table-striped > tbody > tr:nth-of-type(odd) {
-  background-color: #f2fcf6;
+  background-color: #d8dbd9;
 }
 .table-hover > tbody > tr:hover {
   background-color: #f5f5f5;
@@ -6776,10 +6776,10 @@ th {
   text-align: center;
 }
 .quality_test_active {
-  border-left: 1px solid red;
-  border-top: 1px solid red;
-  border-right: 1px solid red;
-  border-bottom: 1px solid red;
+  border-left: 1px solid black;
+  border-top: 1px solid black;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
   margin-bottom: -1px;
   color: #27ae60;
   z-index: 900;
@@ -6810,10 +6810,10 @@ th {
   padding-left: 15px;
   padding-right: 15px;
   background: white;
-  border-left: 1px solid red;
-  border-top: 1px solid red;
-  border-right: 1px solid red;
-  border-bottom: 1px solid red;
+  border-left: 2px solid black;
+  border-top: 2px solid black;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
 }
 @media (min-width: 992px) {
   .test-area {
