--- a/dashboard/static/css/app.css
+++ b/dashboard/static/css/app.css
@@ -1269,7 +1269,7 @@ h2,
 }
 h3,
 .h3 {
-  font-size: 15px;
+  font-size: 22px;
 }
 h4,
 .h4 {
@@ -2315,7 +2315,7 @@ th {
   border-bottom-width: 2px;
 }
 .table-striped > tbody > tr:nth-of-type(odd) {
-  background-color: #d8dbd9;
+  background-color: #FEF9E7;
 }
 .table-hover > tbody > tr:hover {
   background-color: #f5f5f5;
@@ -4619,7 +4619,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #dee2e4;
 }
 .navbar-inverse .navbar-nav > li > a {
-  color: #c16f33;
+  color: #90ee90;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
