--- a/dashboard/static/app/components/unepi/download.html
+++ b/dashboard/static/app/components/unepi/download.html
@@ -24,17 +24,17 @@
             </thead>
             <tbody>
             <tr ng-repeat="row in $data">
-                <td title="Antigen">{{row.vaccine }}</td>
-                <td title="Planned monthly immunisations" class="text-center" >{{row.planned_consumption }}</td>
-                <td title="Monthly Coverage" class="text-center" ng-if="row.coverage_rate >= 90" ng-style="{'background-color':'green'} ">{{row.coverage_rate | number:0 }}%</td>
-                <td title="Monthly Coverage" class="text-center" ng-if="row.coverage_rate >= 80 && row.coverage_rate <90" ng-style="{'background-color':'#90ee90'}">{{row.coverage_rate | number:0 }}%</td>
-                <td title="Monthly Coverage" class="text-center" ng-if="row.coverage_rate >= 50 && row.coverage_rate <80 " ng-style="{'background-color':'yellow'}">{{row.coverage_rate | number:0 }}%</td>
-                <td title="Monthly Coverage" class="text-center" ng-if="row.coverage_rate < 50" ng-style="{'background-color':'red'}">{{row.coverage_rate | number:0 }}%</td>
+                <td title="'Antigen'">{{row.vaccine }}</td>
+                <td title="'Planned monthly immunisations'" class="text-center" >{{row.planned_consumption }}</td>
+                <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate >= 90" ng-style="{'background-color':'green'} ">{{row.coverage_rate | number:0 }}%</td>
+                <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate >= 50 && row.coverage_rate <=70" ng-style="{'background-color':'yellow'}">{{row.coverage_rate | number:0 }}%</td>
+                <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate >= 70 && row.coverage_rate <= 90 " ng-style="{'background-color':'#C3FDB8'}">{{row.coverage_rate | number:0 }}%</td>
+                <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate <= 50" ng-style="{'background-color':'red'}">{{row.coverage_rate | number:0 }}%</td>
 
-                <td title="Annulised Coverage" class="text-center" ng-if="row.avoc >= 90" ng-style="{'background-color':'green'}">{{row.avoc | number:0 }}%</td>
-                <td title="Annulised Coverage" class="text-center" ng-if="row.avoc >= 80 && row.avoc <90" ng-style="{'background-color':'#90ee90'}">{{row.avoc | number:0 }}%</td>
-                <td title="Annulised Coverage" class="text-center" ng-if="row.avoc >= 50 && row.avoc <80 " ng-style="{'background-color':'yellow'}">{{row.avoc | number:0 }}%</td>
-                <td title="Annulised Coverage" class="text-center" ng-if="row.avoc <50" ng-style="{'background-color':'red'}">{{row.avoc | number:0 }}%</td>
+                <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc >= 90" ng-style="{'background-color':'green'}">{{row.avoc | number:0 }}%</td>
+                <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc >= 50 && row.avoc <=70" ng-style="{'background-color':'yellow'}">{{row.avoc | number:0 }}%</td>
+                <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc >= 70 && row.avoc <= 90 " ng-style="{'background-color':'#C3FDB8'}">{{row.avoc | number:0 }}%</td>
+                <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc <= 50" ng-style="{'background-color':'red'}">{{row.avoc | number:0 }}%</td>
             </tr>
             </tbody>
         </table>
@@ -77,7 +77,7 @@
                     <span class="quality_test__description">{{"RED CATEGORY" }}</span>
                     <span class="quality_test__metric"> CAT{{child.category}} </span>
                 </td>
-                <td ng-if="child.category == 2" ng-style="{'background-color':'#90ee90'}">
+                <td ng-if="child.category == 2" ng-style="{'background-color':'#C3FDB8'}">
                     <span class="quality_test__description">{{"RED CATEGORY" }}</span>
                     <span class="quality_test__metric"> CAT{{child.category}} </span>
                 </td>
@@ -114,22 +114,22 @@
             </thead>
             <tbody>
             <tr ng-repeat="row in $data">
-                <td title="ANTIGEN">{{ row.vaccine }}</td>
-                <td title="Months Of Stock" class="text-center" ng-if="row.Months_stock >= 7" ng-style="{'background-color':'green'} ">{{row.Months_stock }}</td>
-                <td title="Months Of Stock" class="text-center" ng-if="row.Months_stock >= 3 && row.Months_stock <7" ng-style="{'background-color':'#90ee90'}">{{row.Months_stock}}</td>
-                <td title="Months Of Stock" class="text-center" ng-if="row.Months_stock >= 1 && row.Months_stock <3 " ng-style="{'background-color':'yellow'}">{{row.Months_stock}}</td>
-                <td title="Months Of Stock" class="text-center" ng-if="row.Months_stock == 0" ng-style="{'background-color':'red'}">{{row.Months_stock}}</td>
+                <td title="'ANTIGEN'">{{ row.vaccine }}</td>
+                <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock >= 7" ng-style="{'background-color':'green'} ">{{row.Months_stock }}</td>
+                <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock >= 3 && row.Months_stock <7" ng-style="{'background-color':'#C3FDB8'}">{{row.Months_stock}}</td>
+                <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock >= 1 && row.Months_stock <3 " ng-style="{'background-color':'yellow'}">{{row.Months_stock}}</td>
+                <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock == 0" ng-style="{'background-color':'red'}">{{row.Months_stock}}</td>
 
 
-                <td title="Refill Rate By NMS" class="text-center" ng-if="row.Refill_rate >= 90" ng-style="{'background-color':'green'} ">{{row.Refill_rate | number:0 }}%</td>
-                <td title="Refill Rate By NMS" class="text-center" ng-if="row.Refill_rate >= 80 && row.Refill_rate <90" ng-style="{'background-color':'#90ee90'}">{{row.Refill_rate | number:0 }}%</td>
-                <td title="Refill Rate By NMS" class="text-center" ng-if="row.Refill_rate >= 50 && row.Refill_rate <80 " ng-style="{'background-color':'yellow'}">{{row.Refill_rate | number:0 }}%</td>
-                <td title="Refill Rate By NMS" class="text-center" ng-if="row.Refill_rate < 50" ng-style="{'background-color':'red'}">{{row.Refill_rate | number:0 }}%</td>
+                <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate >= 90" ng-style="{'background-color':'green'} ">{{row.Refill_rate | number:0 }}%</td>
+                <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate >= 50 && row.Refill_rate <=70" ng-style="{'background-color':'yellow'}">{{row.Refill_rate | number:0 }}%</td>
+                <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate >= 70 && row.Refill_rate <= 90 " ng-style="{'background-color':'#C3FDB8'}">{{row.Refill_rate | number:0 }}%</td>
+                <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate <= 50" ng-style="{'background-color':'red'}">{{row.Refill_rate | number:0 }}%</td>
 
-                <td title="Vaccine Utilised" class="text-center" ng-if="row.uptake_rate >= 90" ng-style="{'background-color':'green'} ">{{row.uptake_rate | number:0 }}%</td>
-                <td title="Vaccine Utilised" class="text-center" ng-if="row.uptake_rate >= 80 && row.uptake_rate <90" ng-style="{'background-color':'#90ee90'}">{{row.uptake_rate | number:0 }}%</td>
-                <td title="Vaccine Utilised" class="text-center" ng-if="row.uptake_rate >= 50 && row.uptake_rate <80 " ng-style="{'background-color':'yellow'}">{{row.uptake_rate | number:0 }}%</td>
-                <td title="Vaccine Utilised" class="text-center" ng-if="row.uptake_rate < 50" ng-style="{'background-color':'red'}">{{row.uptake_rate | number:0 }}%</td>
+                <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate >= 90" ng-style="{'background-color':'green'} ">{{row.uptake_rate | number:0 }}%</td>
+                <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate >= 50 && row.uptake_rate <=70" ng-style="{'background-color':'yellow'}">{{row.uptake_rate | number:0 }}%</td>
+                <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate >= 70 && row.uptake_rate <= 90 " ng-style="{'background-color':'#C3FDB8'}">{{row.uptake_rate | number:0 }}%</td>
+                <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate <= 50" ng-style="{'background-color':'red'}">{{row.uptake_rate | number:0 }}%</td>
             </tr>
             </tbody>
         </table>
@@ -171,6 +171,10 @@
                     <span class="quality_test__metric"> {{}} </span>
                 </td>
          </table>
-    </div>
-    -->
+    </div> -->
+
+</div>
+
+<!--<div class="wrapper" ng-controller="UnepiController">
+    <ng-pdf template-url="/partials/viewer.html">download</ng-pdf>
 </div>
