Extracted the Additional metrics. Integrated them into Unepi landing page.

--- a/dashboard/static/app/components/unepi/download.html
+++ b/dashboard/static/app/components/unepi/download.html
@@ -147,7 +147,7 @@
          </table>
     </div>
 
-    <!--<table class="row-border hover table table-condensed table-striped">
+    <table class="row-border hover table table-condensed table-striped">
         <td>
             <h4 class="text-center"><b>COLD CHAIN</b></h4>
         </td>
@@ -168,10 +168,10 @@
          <table class="row-border hover table table-condensed table-striped">
                 <td>
                     <span class="quality_test__description">{{"Cold Chain Capacity:(DVS & Facilities)" }}</span>
-                    <span class="quality_test__metric"> {{}} </span>
+                    <span class="quality_test__metric"> {{child.cold_chain_surplus}} </span>
                 </td>
          </table>
-    </div> -->
+    </div>
 
 </div>
 
