--- a/dashboard/static/app/components/unepi/download.html
+++ b/dashboard/static/app/components/unepi/download.html
@@ -1,3 +1,4 @@
+
 <div ng-controller="UnepiController as vm">
 
     <td>
@@ -158,7 +159,7 @@
          <table class="row-border hover table table-condensed table-striped">
                 <td>
                     <span class="quality_test__description">{{"Cold Chain Equipment Functionality (DVS & Facilities)" }}</span>
-                    <span class="quality_test__metric"> {{}} </span>
+                    <span class="quality_test__metric"><br> {{ cold_chain_functionality }}% </span>
                 </td>
          </table>
     </div>
