Implemented feature to generate PDF of Unepi report.

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -126,6 +126,8 @@
 <script type="text/javascript" src='{% static "vendor/angular-chart/angular-chart.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/ng-table/dist/ng-table.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/angular-datatables/dist/angular-datatables.min.js"%}'></script>
+<script type="text/javascript" src='{% static "vendor/html2canvas/build/html2canvas.min.js"%}'></script>
+<script type="text/javascript" src='{% static "vendor/jspdf/dist/jspdf.min.js"%}'></script>
 <script type="text/javascript" src='{% static "app/app.js" %}'></script>
 <script type="text/javascript" src='{% static "app/routes.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/filterService.js" %}'></script>
