--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -1,45 +1,60 @@
 <div ng-controller="MainController as shell">
 
+    <div class="row">
+    <div class="filter-title col-md-12 heading">
+        <h5 class="filter-title">FILTERS</h5>
+    </div>
+    </div>
+
     <div class="row range_filter">
 
-        <div class="filter-title col-md-12">
-            <span class="filter-title h3">FILTERS</span>
-        </div>
 
         <div class="col-md-12 main-filters">
-            Start Month<br>
+            <div class="filter-field">
+            Start Month
             <select name="name" class="form-control filter criteria-select" ng-model="shell.startMonth"
                 ng-options="month as month.name group by month.year for month in shell.months ">
             </select>
+        </div>
         <div class="spacer">
             <h5 class="text-center">  </h5>
         </div>
+            <div class="filter-field">
             End Month<br>
             <select name="month" class="form-control filter criteria-select" ng-model="shell.endMonth"
                     ng-options="month as month.name group by month.year for month in shell.months.slice(shell.months.indexOf(shell.startMonth))">
             </select>
+        </div>
         <div class="spacer">
             <h5 class="text-center">  </h5>
         </div>
+            <div class="filter-field">
             Antigen<br>
             <select name="vaccine" class="form-control filter criteria-select" ng-model="shell.selectedVaccine"
                     ng-options="vaccine as vaccine.name for vaccine in shell.vaccines">
             </select>
+        </div>
         <div class="spacer">
             <h5 class="text-center">  </h5>
         </div>
+            <div class="filter-field">
             District<br>
             <select name="district" class="form-control filter criteria-select" ng-model="shell.selectedDistrict"
                     ng-options="district as district.name for district in shell.districts">
             </select>
+        </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="filter-title col-md-12 heading">
+            <h5 class="filter-title">KEY METRICS</h5>
         </div>
     </div>
 
 
     <div class="row">
         <div class="col-md-12">
-         <h3>KEY METRICS</h3>
-            <br>
 
             <div class="quality_test text-center" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.stockonhand" ui-sref-opts="{reload: true}">
