--- a/dashboard/static/app/components/unepi/report.html
+++ b/dashboard/static/app/components/unepi/report.html
@@ -3,15 +3,24 @@
     <div class="row range_filter" style="align-content: center">
 
         <div class="col-md-12 main-filters">
+
+            <div class="filter-field">
+                Month
             <select name="month" class="form-control filter criteria-select" ng-model="shell.endMonth"
                     ng-options="month as month.name group by month.year for month in shell.months.slice(shell.months.indexOf(shell.startMonth))">
             </select>
+        </div>
+
             <div class="spacer">
-                <h5 class="text-center"> - </h5>
+                <h5 class="text-center"> </h5>
             </div>
+
+            <div class="filter-field">
+                District
             <select name="district" class="form-control filter criteria-select" ng-model="shell.selectedDistrict"
                     ng-options="district as district.name for district in shell.districts">
             </select>
+        </div>
 
         </div>
 
