Task: Heat map should be hidden if district is selected.

--- a/dashboard/static/css/additional-styles.css
+++ b/dashboard/static/css/additional-styles.css
@@ -146,3 +146,14 @@ h1, h2, h3, h4, h5, h6, th {
     position: relative;
     height: 450px;
 }
+
+.map-placeholder {
+    height: 450px;
+    padding-top: 200px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#map #tooltip {
+    text-align: center;
+}
