--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -119,6 +119,7 @@
 <script type="text/javascript" src='{% static "vendor/angular-datatables/dist/angular-datatables.min.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/html2canvas/build/html2canvas.min.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/jspdf/dist/jspdf.min.js"%}'></script>
+<script type="text/javascript" src='{% static "vendor/d3-legend/d3-legend.min.js"%}'></script>
 <script type="text/javascript" src='{% static "app/app.js" %}'></script>
 <script type="text/javascript" src='{% static "app/routes.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/filterService.js" %}'></script>
