Changed light green to yellow on Unepi page.

--- a/dashboard/static/app/components/unepi/download.html
+++ b/dashboard/static/app/components/unepi/download.html
@@ -85,7 +85,7 @@
                         <span class="quality_test__description">{{"RED CATEGORY" }}</span>
                         <span class="quality_test__metric"> CAT{{child.category}} </span>
                     </td>
-                    <td ng-if="child.category == 2" ng-style="{'background-color':'#C3FDB8'}">
+                    <td ng-if="child.category == 2" ng-style="{'background-color':'yellow'}">
                         <span class="quality_test__description">{{"RED CATEGORY" }}</span>
                         <span class="quality_test__metric"> CAT{{child.category}} </span>
                     </td>
