--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -130,6 +130,7 @@
 <script type="text/javascript" src='{% static "app/shared/coverageService.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/annualService.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/mapSupportService.js" %}'></script>
+<script type="text/javascript" src='{% static "app/shared/coverageCalculatorService.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/mainController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/common/helpers.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/coverage/coverageController.js" %}'></script>
